# workflow-tracker

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy-backend.yml
backend/: .dockerignore  .env.example  Dockerfile  deploy.sh  pyproject.toml
backend/accounts/: api.py  models.py  schemas.py  services.py
backend/accounts/migrations/: 0001_initial.py
backend/applications/: api.py  models.py  schemas.py  services.py
backend/applications/migrations/: 0001_initial.py  0002_application_owner_review_history.py
backend/applications/tests/: test_api.py
backend/config/: settings.py  urls.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  styles.css
frontend/src/api/: applications.ts  auth.ts  client.ts
frontend/src/components/: ActionButtons.tsx  ApplicationForm.tsx  ProtectedRoute.tsx  StatusBadge.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: ui.ts
frontend/src/pages/: ApplicationDetailPage.tsx  ApplicationFormPage.tsx  ApplicationListPage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/routes/: index.tsx
frontend/src/types/: application.ts  auth.ts
