[project]
name = "trendflow-workflow-backend"
version = "0.1.0"
description = "Django Ninja backend for the Trendflow workflow tracker assignment."
requires-python = ">=3.14"
dependencies = [
  "Django>=5.2,<6.0",
  "django-cors-headers>=4.8,<5.0",
  "django-ninja>=1.4,<2.0",
  "gunicorn>=23.0,<24.0",
]

[tool.uv]
package = false
